--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.scss
@@ -18,3 +18,4 @@
 @import 'search-result/search-result.scss';
 @import 'footer/footer.scss';
 @import 'pill/pill.scss';
+@import 'articles-table/articles-table.scss';
