Calendar and application fixes, and updates to styling

--- a/phpgwapi/js/pecalendar/pecalendar.css
+++ b/phpgwapi/js/pecalendar/pecalendar.css
@@ -1314,6 +1314,7 @@ h4, .h4 {
   grid-template-columns: 6.375rem 1fr auto;
   min-height: 5rem;
   align-items: center;
+  max-width: 450px;
 }
 .time-slot-card .time-slot-status {
   border-radius: 0.5rem 0 0 0.5rem;
