fixes to calender, and new application, + restyling

--- a/phpgwapi/js/pecalendar/pecalendar.css
+++ b/phpgwapi/js/pecalendar/pecalendar.css
@@ -809,6 +809,39 @@ h4, .h4 {
   font-weight: 900;
 }
 
+.line-height-h1 {
+  line-height: 1.75;
+}
+@media (min-width: 768px) {
+  .line-height-h1 {
+    line-height: 1.75;
+  }
+}
+.line-height-h2 {
+  line-height: 2.2;
+}
+@media (min-width: 768px) {
+  .line-height-h2 {
+    line-height: 1.75;
+  }
+}
+.line-height-h3 {
+  line-height: 1.4;
+}
+@media (min-width: 768px) {
+  .line-height-h3 {
+    line-height: 2.2;
+  }
+}
+.line-height-h4 {
+  line-height: 1.4;
+}
+@media (min-width: 768px) {
+  .line-height-h4 {
+    line-height: 1.4;
+  }
+}
+
 :root {
   --day-width: 1fr;
   --time-width: 3em;
