--- a/phpgwapi/templates/bookingfrontend_2/styleguide/typography/typography.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/typography/typography.scss
@@ -132,3 +132,30 @@ h4, .h4 {
     font-weight: $text-bolder;
   }
 }
+
+.line-height {
+  &-h1 {
+    line-height: $h2-lineheight;
+    @media (min-width: $media-medium) {
+      line-height: $h1-lineheight; //64px
+    }
+  }
+  &-h2 {
+    line-height: $h3-lineheight;
+    @media (min-width: $media-medium) {
+      line-height: $h2-lineheight; //48px
+    }
+  }
+  &-h3 {
+    line-height: $h4-lineheight;
+    @media (min-width: $media-medium) {
+      line-height: $h3-lineheight; //48px
+    }
+  }
+  &-h4 {
+    line-height: $h4-lineheight;
+    @media (min-width: $media-medium) {
+      line-height: $h4-lineheight; //48px
+    }
+  }
+}
