--- a/phpgwapi/templates/bookingfrontend_2/styleguide/typography/typography.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/typography/typography.scss
@@ -84,7 +84,7 @@ h4, .h4 {
     line-height: 1.75rem; //28px
   }
 
-  &-body {
+  &-body, &-normal {
     font-size: $text-body; //16px
     line-height: 1.75rem; //28px
   }
