--- a/phpgwapi/templates/bookingfrontend_2/styleguide/pill/pill.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/pill/pill.scss
@@ -15,9 +15,9 @@
 
   &--secondary {
     --main-divider-opacity: 20%;
-    --main-bg-color: #{$purple-40};
+    --main-bg-color: #{$purple-24};
     --main-divider-color: #{$purple};
-    --main-text-color: #{$black};
+    --main-text-color: #{$purple};
   }
 
   &--success {
