--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
@@ -2504,9 +2504,9 @@ textarea {
 }
 .pill--secondary {
   --main-divider-opacity: 20%;
-  --main-bg-color: #c9b1d0;
+  --main-bg-color: #dfd0e3;
   --main-divider-color: #793C8A;
-  --main-text-color: #000000;
+  --main-text-color: #793C8A;
 }
 .pill--success {
   --main-divider-opacity: 20%;
