--- a/phpgwapi/js/pecalendar/pecalendar.scss
+++ b/phpgwapi/js/pecalendar/pecalendar.scss
@@ -713,7 +713,20 @@ $current-time-color: #ea4335;
     border-left: 0;
     display: flex;
     justify-content: center;
-
+  //  d-flex flex-wrap gap-1
+    .time-slot-date-container {
+      .single-date {
+        display: flex;
+        gap: 0.25rem;
+        flex-direction: column;
+      }
+      .multi-date {
+        display: flex;
+        gap: 0.25rem;
+        flex-direction: row;
+        flex-wrap: wrap;
+      }
+    }
   }
 
   .time-slot-button {
