Articles table fixes

--- a/phpgwapi/templates/bookingfrontend_2/styleguide/articles-table/articles-table.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/articles-table/articles-table.scss
@@ -194,6 +194,9 @@
         }
 
         .item-quantity {
+          display: flex;
+          gap: 0.25rem;
+          align-items: center;
           grid-area: quantity;
         }
 
