--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
@@ -990,16 +990,28 @@ h4, .h4 {
   min-width: 2.5rem;
 }
 .pe-btn--small-circle {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: none;
   border-radius: 50%;
-  width: 25px;
-  height: 25px;
+  width: 24px;
+  height: 24px;
   padding: 0;
-  font-weight: 400;
-  font-size: 0.75rem;
+  font-size: 12px;
   cursor: pointer;
   transition: background-color 0.3s;
+}
+.pe-btn--small-circle i {
+  display: flex; /* Ensure the icon itself is also flex */
+  align-items: center; /* Center vertically */
+  justify-content: center; /* Center horizontally */
+  width: 100%; /* Make the icon fill the button to center it properly */
+}
+.pe-btn--small-circle i::before {
+  display: inline-block; /* Allows for text-centering within the flex item */
+  text-align: center;
+  width: 100%; /* Ensures the pseudo-element covers the flex item's area */
 }
 .pe-btn--small-circle:hover, .pe-btn--small-circle:active {
   background: #e9e0ec;
@@ -2779,6 +2791,9 @@ textarea {
   grid-area: price;
 }
 .article-table-wrapper .category-table .category-articles .category-article-row .item-quantity {
+  display: flex;
+  gap: 0.25rem;
+  align-items: center;
   grid-area: quantity;
 }
 .article-table-wrapper .category-table .category-articles .category-article-row .item-sum {
