--- a/bookingfrontend/templates/bookingfrontend_2/css/resource.css
+++ b/bookingfrontend/templates/bookingfrontend_2/css/resource.css
@@ -28,7 +28,7 @@
   content: "";
   width: 100%;
   height: 2.5em;
-  background: linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.56) 50%);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5018207967) 35%, rgba(255, 255, 255, 0.9023810208) 84%, rgb(255, 255, 255) 100%);
   position: absolute;
   bottom: 0;
   right: 0;
