--- a/bookingfrontend/templates/bookingfrontend_2/css/resource.scss
+++ b/bookingfrontend/templates/bookingfrontend_2/css/resource.scss
@@ -31,7 +31,7 @@
     content: '';
     width: 100%;
     height: 2.5em;
-    background: linear-gradient(to bottom, transparent, rgba(255, 255, 255, 0.56) 50%);
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,0.5018207966780462) 35%, rgba(255,255,255,0.9023810207676821) 84%, rgb(255, 255, 255) 100%);;
     position: absolute;
     bottom: 0;
     right: 0;
