--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.scss
@@ -19,3 +19,4 @@
 @import 'footer/footer.scss';
 @import 'pill/pill.scss';
 @import 'articles-table/articles-table.scss';
+@import 'light-box/light-box.scss';
