--- a/phpgwapi/js/pecalendar/pecalendar.css
+++ b/phpgwapi/js/pecalendar/pecalendar.css
@@ -779,6 +779,17 @@ h4, .h4 {
     line-height: 1.125rem;
   }
 }
+.text-overline {
+  font-size: 0.75rem;
+  line-height: 1.375rem;
+  text-transform: uppercase;
+}
+@media (max-width: 1024px) {
+  .text-overline {
+    font-size: 0.625rem;
+    line-height: 1.25rem;
+  }
+}
 .text-body, .text-normal, .text-medium, .text-lg {
   font-size: 1rem;
   line-height: 1.75rem;
