JS fixes, and reuse duplicate parts, spacing

--- a/phpgwapi/templates/bookingfrontend_2/styleguide/custom.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/custom.scss
@@ -41,3 +41,11 @@ $media-xxlarge: 1400px;
 fieldset {
   padding: 0;
 }
+
+.pb-2r {
+  padding-bottom: 2rem;
+}
+
+.mb-2r {
+  margin-bottom: 2rem;
+}
