--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.scss
@@ -20,3 +20,4 @@
 @import 'pill/pill.scss';
 @import 'articles-table/articles-table.scss';
 @import 'light-box/light-box.scss';
+@import 'collapsable-text/collapsable-text.scss';
