--- a/phpgwapi/js/pecalendar/pecalendar.css
+++ b/phpgwapi/js/pecalendar/pecalendar.css
@@ -707,6 +707,14 @@ fieldset {
   padding: 0;
 }
 
+.pb-2r {
+  padding-bottom: 2rem;
+}
+
+.mb-2r {
+  margin-bottom: 2rem;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -721,8 +729,9 @@ body {
 }
 
 h1, .h1 {
-  font-weight: 900;
+  font-weight: 400;
   margin-top: 0;
+  margin-bottom: 2rem;
   font-size: 3.5rem;
   line-height: 4.25rem;
 }
@@ -734,7 +743,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-weight: 900;
+  font-weight: 400;
   font-size: 2.25rem;
   line-height: 2.75rem;
 }
@@ -841,42 +850,34 @@ h4, .h4 {
 }
 
 .line-height-h1 {
-  font-size: 2.25rem;
   line-height: 2.75rem;
 }
 @media (max-width: 1024px) {
   .line-height-h1 {
-    font-size: 1.5rem;
     line-height: 1.875rem;
   }
 }
 .line-height-h2 {
-  font-size: 1.25rem;
   line-height: 1.625rem;
 }
 @media (max-width: 1024px) {
   .line-height-h2 {
-    font-size: 1.125rem;
     line-height: 1.5rem;
   }
 }
 .line-height-h3 {
-  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 @media (max-width: 1024px) {
   .line-height-h3 {
-    font-size: 1rem;
     line-height: 1.375rem;
   }
 }
 .line-height-h4 {
-  font-size: 1rem;
   line-height: 1.25rem;
 }
 @media (max-width: 1024px) {
   .line-height-h4 {
-    font-size: 0.875rem;
     line-height: 1.125rem;
   }
 }
