--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
@@ -707,6 +707,14 @@ fieldset {
   padding: 0;
 }
 
+.pb-2r {
+  padding-bottom: 2rem;
+}
+
+.mb-2r {
+  margin-bottom: 2rem;
+}
+
 :root {
   --bs-gutter-x: 0.625rem;
   --bs-gutter-y: 0.625rem;
@@ -743,8 +751,9 @@ body {
 }
 
 h1, .h1 {
-  font-weight: 900;
+  font-weight: 400;
   margin-top: 0;
+  margin-bottom: 2rem;
   font-size: 3.5rem;
   line-height: 4.25rem;
 }
@@ -756,7 +765,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-weight: 900;
+  font-weight: 400;
   font-size: 2.25rem;
   line-height: 2.75rem;
 }
@@ -863,42 +872,34 @@ h4, .h4 {
 }
 
 .line-height-h1 {
-  font-size: 2.25rem;
   line-height: 2.75rem;
 }
 @media (max-width: 1024px) {
   .line-height-h1 {
-    font-size: 1.5rem;
     line-height: 1.875rem;
   }
 }
 .line-height-h2 {
-  font-size: 1.25rem;
   line-height: 1.625rem;
 }
 @media (max-width: 1024px) {
   .line-height-h2 {
-    font-size: 1.125rem;
     line-height: 1.5rem;
   }
 }
 .line-height-h3 {
-  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 @media (max-width: 1024px) {
   .line-height-h3 {
-    font-size: 1rem;
     line-height: 1.375rem;
   }
 }
 .line-height-h4 {
-  font-size: 1rem;
   line-height: 1.25rem;
 }
 @media (max-width: 1024px) {
   .line-height-h4 {
-    font-size: 0.875rem;
     line-height: 1.125rem;
   }
 }
@@ -2884,6 +2885,25 @@ textarea {
   align-items: center;
   font-size: 20px;
   border-radius: 0.875rem;
+}
+
+.collapsible-content {
+  line-height: 1.5em;
+  overflow: hidden;
+  position: relative;
+}
+
+.collapsed-description {
+  max-height: 9.55em; /* 3 lines */
+}
+.collapsed-description::after {
+  content: "";
+  width: 100%;
+  height: 2.5em;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5018207967) 35%, rgba(255, 255, 255, 0.9023810208) 84%, rgb(255, 255, 255) 100%);
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
