--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.css
@@ -751,6 +751,7 @@ body {
 }
 
 h1, .h1 {
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   margin-top: 0;
   margin-bottom: 2rem;
@@ -765,6 +766,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: 2.25rem;
   line-height: 2.75rem;
