--- a/phpgwapi/templates/bookingfrontend_2/styleguide/typography/typography.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/typography/typography.scss
@@ -75,6 +75,7 @@ body {
 }
 
 h1, .h1 {
+  font-family: "Poppins", sans-serif;
   font-weight: $text-normal;
   margin-top: 0;
   margin-bottom: 2rem;
@@ -82,6 +83,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
+  font-family: "Poppins", sans-serif;
   font-weight: $text-normal;
   @include applyFontProperties('headline');
 }
